email parameter in project, optional adapter parameters
